# ross-server

./: .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  OPENROUTER_TESTING.md  README.md  SETUP_GUIDE.md  package-lock.json  ross-ai-api.postman_collection.json  setup-deployment.sh
ai-eval-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build-docker.sh  docker-compose.yml  evaluator.py  main.py  pyproject.toml  requirements.txt  worker.py
backend/: .env.example  README.md  crc_sample.csv  database.js  env.example  package-lock.json  package.json  tsconfig.json
backend/migrations/: 1761391109801_add-otp-to-email-verification-tokens.js  1761469686760_add-score-table.js  1761475693149_add-user-relation-in-assessment-answers.js  1761643237227_update-subscription-status.js  1761724485233_add-email-verification-otp-index.js  1761800000000_fix-subscription-status-constraint.js  1761892410968_add-fairness-questions-table.js  1761922695401_add-fairness-evaluation-table.js  1762005000000_create-waitlist-emails.js  1763386046059_evaluation-status-table.js  1764072288183_add-description-column-in-aima-ques.js  1764075167520_add-industry-column-in-projects.js  1765544901827_fix-fairness-questions.js  (+39 more)
frontend/: .env.example  env.example  isolate_test.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
horizons-export-4c786561-33bb-4d10-9dfd-fc589bab59dd/: package-lock.json
landing-page/: index.html  package-lock.json  package.json
worker/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  worker.ts
(+414 files in other folders)
